/**
 * e8yes demo web server.
 *
 * <p>Copyright (C) 2020 Chifeng Wen {daviesx66@gmail.com}
 *
 * <p>This program is free software: you can redistribute it and/or modify it under the terms of the
 * GNU General Public License as published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * <p>You should have received a copy of the GNU General Public License along with this program. If
 * not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package e8;

import "pagination.proto";
import "user_profile.proto";
import "user_relation.proto";

message GetUserRelationsRequest {
    // Source user is the logged in user.
    int64 target_user_id = 1;
}

message GetUserRelationsResponse {
    int64 source_user_id = 1;
    int64 target_user_id = 2;
    repeated UserRelation user_relation = 3;
}

message SendInvitationRequest {
    int64 invitee_user_id = 1;
}

message SendInvitationResponse {}


message DeleteInvitationRequest {
    int64 invitee_user_id = 1;
}

message DeleteInvitationResponse {}


message AcceptInvitationRequest {
    int64 inviter_user_id = 1;
}

message AcceptInvitationResponse {}


message RejectInvitationRequest {
    int64 inviter_user_id = 1;
}

message RejectInvitationResponse {}


message GetInvitationListRequest {
    Pagination pagination = 1;
}

message GetInvitationListResponse {
    repeated UserPublicProfile user_profiles = 1;
}


message DeleteContactRequest {
    int64 deleted_contact_user_id = 1;
}

message DeleteContactResponse {}


message GetContactListRequest {
    Pagination pagination = 1;
}

message GetContactListResponse {
    repeated UserPublicProfile user_profiles = 1;
}

service SocialNetworkService {
    /**
     * Get the directed relation between the logged-in user and some other user.
     */
    rpc GetUserRelations(GetUserRelationsRequest) returns (GetUserRelationsResponse);

    /**
     * Send an invitation to another user where the logged-in user is the inviter.
     */
    rpc SendInvitation (SendInvitationRequest) returns (SendInvitationResponse);

    /**
     * Delete an invitation previously sent where the logged-in user is inviter.
     */
    rpc DeleteInvitation (DeleteInvitationRequest) returns (DeleteInvitationResponse);

    /**
     * Accept an invitation to establish friend relation where the logged-in user is the invitee.
     */
    rpc AcceptInvitation (AcceptInvitationRequest) returns (AcceptInvitationResponse);

    /**
     * Reject an invitation where the logged-in user is the invitee.
     */
    rpc RejectInvitation (RejectInvitationRequest) returns (RejectInvitationResponse);

    /**
     * Get the invitation list where the logged-in user is the invitee.
     */
    rpc GetInvitationList (GetInvitationListRequest) returns (GetInvitationListResponse);

    /**
     * Delete a contact relation for the logged-in user.
     */
    rpc DeleteContact (DeleteContactRequest) returns (DeleteContactResponse);

    /**
     * Get the contact list of the logged-in user.
     */
    rpc GetContactList (GetContactListRequest) returns (GetContactListResponse);
}
